@startuml foco

class Usuario
class Foco{
    - EstadoFoco estado
    + Encender()
    + Apagar()
    + LeerEstado() : EstadoFoco
}
class EstadoFoco
class SerieFocos{
- Foco focos[10]
+ MostrarFocos
+ EncenderFocos()
+ApagarFocos()
}
Usuario o-- Foco
Foco *-- EstadoFoco
EstadoFoco --|> Booleano
SerieFocos "1" *-- "10" Foco

Usuario o-- SerieFocos 

@enduml